<resources>
    <string name="app_name"><b>IHSI - Actualisation Cartographique</b></string>
    <string name="msg_TitreAccueil"><b>Institut Haïtien de Statistique et d\'Informatique <strong>(IHSI)</strong></b></string>
    <string name="msg_SousTitreAccueil">Recencement Général de la Population et de l\'habitat de 2016</string>
    <string name="label_NumeroBat">Nunéro Bâtiment</string>
    <string name="label_NumeroBatCourt">No.</string>
    <string name="label_Type_Batiment">Type Bâtiment</string>
    <string name="label_adresse_du_batiment">Adresse du Bâtiment</string>
    <string name="label_adresse_du_batiment_habitation">Habitation</string>
    <string name="label_adresse_du_batiment_Localite">Localité</string>
    <string name="label_adresse_du_batiment_Anc_Nom">Ancien Nom</string>
    <string name="label_adresse_du_batiment_Nouv_Nom">Nouveau Nom</string>
    <string name="label_Longitude">Longitude (X)</string>
    <string name="label_Latitude">Latitude (Y)</string>
    <string name="label_Coordonnees_du_batiment">Coordonnées du Bâtiment</string>
    <string name="label_EtatActuel">Etat Actuel du bâtiment</string>
    <string name="label_NbrEtage">Nbre Etage</string>
    <string name="label_UsageBatiment">Usage du Bâtiment</string>
    <string name="label_NbrLogement">Nbre Logement</string>
    <string name="label_PhoneChefMenage">Téléphone chef Ménage</string>
    <string name="label_PhoneInstitution">Téléphone Institution</string>
    <string name="label_NomCompletChefMenage">Nom Complet Chef Ménage</string>
    <string name="label_NomInstitution">Nom Institution</string>
    <string name="label_NomCompletChefMenage_et_Institution">Nom du Chef de Ménage ou l\'Institution</string>
    <string name="label_NbrPersonneVivant">Nombre de personne vivant dans le logement</string>
    <string name="label_NbrFemmeVivant">Nombre Femme Vivante</string>
    <string name="label_NbrHommeVivant">Nombre Homme Vivant</string>
    <string name="label_Remarques">Remarques</string>
    <string name="Label_Sauvegarder">Sauvegarder</string>
    <string name="label_Nouveau">Nouveau</string>
    <string name="Label_Annuler">Annuler</string>
    <string name="label_NumeroLogement">Numéro Logement</string>
    <string name="label_Ajouter_Nouveau">Ajouter Nouveau </string>
    <string name="label_Ajouter_Nouveau_Batiment">Ajouter Nouveau Bâtiment</string>
    <string name="label_Fermer">Fermer</string>
    <string name="msg_title_succesInformation">.:: Informations ::.</string>
    <string name="label_Quitter">Quitter</string>
    <string name="label_Continuer">Continuer</string>
    <string name="label_Obligatoire">Obligatoire</string>
    <string name="label_Terminer">Terminer</string>
    <string name="label_ListeLogement">Liste des Logements</string>
    <string name="label_list_menu_afficher">Afficher</string>
    <string name="label_list_menu_modifier">Modifier</string>

    <string name="label_Selectionnez_Departement">Selectionnez un Département</string>
    <string name="label_Selectionnez_Une_Commune">Sélectionnez une Commune</string>
    <string name="label_Selectionnez_SectionCommunnale">Sélectionnez une section Communale</string>
    <string name="label_Selectionnez_TypeFormulaire">Sélectionnez le Type de Formulaire</string>
    <string name="label_Selectionnez_CodeSDE">Sélectionnez le Code SDE</string>
    <string name="label_CahierInventaire">Cahier d\'Inventaire</string>
    <string name="label_CodeSDE">Code SDE</string>
    <string name="label_NomEtPrenomCartographe">Nom et Prénom du Cartographe</string>
    <string name="label_NomEtPrenomSuperviseur">Nom et Prénom du Superviseur</string>
    <string name="label_NePlusAfficherCetteFenetre">Ne plus afficher cette Fenêtre la prochaine fois.</string>
    <string name="msg_ActualisationCartographique">Actualisation Cartographique</string>
    <string name="label_Formulaire_Rural">Formulaire Rural</string>
    <string name="label_Formulaire_Urbain">Formulaire Urbain</string>

    <string name="msg_Departement_Obligatoire">Département Obligatoire</string>
    <string name="msg_Commune_Obligatoire">Commune Obligatoire</string>
    <string name="msg_Vqse_Obligatoire">Section Communale Obligatoire</string>
    <string name="label_Batiment">Bâtiment</string>
    <string name="msg_Obligatoire"> Obligatoire</string>
    <string name="label_MotDePasse">Mot de Passe</string>
    <string name="label_CompteUtilisateur">Compte Utilisateur</string>
    <string name="label_Connecter">Connecter</string>
    <string name="msg_MotDePasse_TropCourt">Mot De Passe Trop Court</string>
    <string name="msg_MotDePasse_Obligatoire">Mot De Passe Obligatoire</string>
    <string name="msg_Inactif">Inactif</string>
    <string name="label_Incorrect">Incorrect</string>
    <string name="label_Oui">Oui</string>
    <string name="label_Non">Non</string>
    <string name="msg_title_Attention">Attention</string>
    <string name="msg_title_Information">Informations</string>
    <string name="msg_DefinitionFormulaire"><i>Définir le type de formulaire pour l\'agent</i></string>
    <string name="msg_SDEInfomation">Voir la liste des SDEs ou Ajouter une nouvelle SDE</string>
    <string name="label_Modifier">Modifier</string>
    <string name="msg_TypeFormulaire_Obligatoire">Type formulaire Obligatoire</string>
    <string name="msg_Configuration_SDE">Configuration SDE</string>
    <string name="label_NoBatiment">No.</string>
    <string name="label_Configurer">Configurer pour l\'appareil</string>
    <string name="label_RefreshList">Rafraichir</string>
    <string name="label_list_menu_module_menu">Afficher les </string>
    <string name="label_Tous_Les_SDE">Afficher tous les SDE</string>
    <string name="label_Afficher_SDE_ParFormulaire">Afficher SDE</string>
    <string name="label_Deconnecter">Déconnecter</string>
    <string name="label_PauseGPS">Pause</string>
    <string name="label_ResumeGPS">Capter les coordonnées GPS</string>
    <string name="msg_Coordonnee_Update">Coordonnées GPS Modifiée..</string>
    <string name="label_Annuler">Annuler</string>
    <string name="label_OpenSettings">Ouvrir Paramètres</string>
    <string name="msg_ActiverLeGPS">Activer le GPS pour utiliser le service de Localisation!</string>
    <string name="msg_GPSNotAvailable">Le service de localisation n\'est pas Activé...</string>
    <string name="LabelGestionCompteUtilisateur">Gestion des Comptes Utilisateur</string>
    <string name="label_ConfirmationMotDePasse">Confirmation Mot de passe</string>
    <string name="label_GroupeUtilisateur">Groupe Utilisateur</string>

    <!-- lafalaise-modify_-->


</resources>
