<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bootstrap_gray_lighter"
    android:orientation="vertical"
    android:weightSum="1">

    <!--  LOGEMENT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/LLStyle"
        >
        <LinearLayout
            android:id="@+id/LLGrandTitre"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_alignLeft="@+id/recycler_view"
            android:layout_alignStart="@+id/recycler_view"
            style="@style/LLStyle"
            android:layout_margin="0dp"
            >
            <TextView
                android:id="@+id/tv_GrandTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_ListeLogement"
                android:textAlignment="center"
                android:textColor="@color/bootstrap_brand_primary"
                android:textSize="17dp"
                android:layout_margin="0dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/LLStyle"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/tv_NumeroLogement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logement 1 / 10"
                style="@style/tvTitre2"
                android:textAlignment="center"
                android:textColor="@color/bootstrap_brand_primary"
                android:textSize="15dp"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/LLStyle"
        >
        <TextView
            android:id="@+id/tv_NomCompletChefMenage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_NomCompletChefMenage_et_Institution"
            style="@style/tvTitre2"
            />
        <EditText
            android:background="@drawable/my_shape"
            android:padding="10dp"
            android:id="@+id/et_NomCompletChefMenage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_NomCompletChefMenage"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/tv_PhoneChefMenage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_PhoneChefMenage"
            style="@style/tvTitre2"
            />
        <EditText
            android:background="@drawable/my_shape"
            android:padding="10dp"
            android:id="@+id/et_PhoneChefMenage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_PhoneChefMenage"
            android:inputType="number|numberSigned|numberDecimal"
            android:maxLength="13"
            android:ems="8"
            android:maxLines="1"
            android:singleLine="true"
            />
    </LinearLayout>
    <!--  -->

    <!-- DEBUT -->
    <LinearLayout
        android:id="@+id/LLNbreHommeEtFemme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/LLStyle"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_NbrPersonneVivant"
            style="@style/tvTitre2"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_NbrHommeVivant"
                    style="@style/tvTitre2"
                    />
                <EditText
                    android:background="@drawable/my_shape"
                    android:padding="10dp"
                    android:id="@+id/et_NbrHommeVivant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_NbrHommeVivant"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    />
                </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_NbrFemmeVivant"
                    style="@style/tvTitre2"
                    />
                <EditText
                    android:background="@drawable/my_shape"
                    android:padding="10dp"
                    android:id="@+id/et_NbrFemmeVivant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_NbrFemmeVivant"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    />
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/LLStyle"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Remarques"
            style="@style/tvTitre2"
            />
        <EditText
            android:background="@drawable/my_shape"
            android:padding="10dp"
            android:id="@+id/et_Remarques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_Remarques"
            android:inputType="textMultiLine"
            android:ems="10"
            android:maxLines="4"
            android:singleLine="false"
            style="@style/LLStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/LLStyle"
        android:gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Quitter"
            android:id="@+id/btnQuitter"
            android:background="@color/bootstrap_brand_secondary_border"
            android:paddingLeft="@dimen/activity_10dp"
            android:paddingRight="@dimen/activity_10dp"
            android:layout_marginRight="@dimen/activity_10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Continuer"
            android:id="@+id/btnContinuer"
            android:background="@color/bootstrap_brand_primary"
            android:textColor="@color/colorWhite"
            android:paddingLeft="@dimen/activity_10dp"
            android:paddingRight="@dimen/activity_10dp"
            android:layout_marginLeft="@dimen/activity_10dp"
            android:layout_marginRight="@dimen/activity_10dp"
            />
    </LinearLayout>

    <!-- FIN -->
</LinearLayout>


<!-- Edit_text_logement modify by JML
  <EditText
                        android:background="@drawable/my_shape"
                        android:padding="10dp"
                        android:id="@+id/et_PhoneChefMenage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_PhoneChefMenage"
                        android:inputType="number|numberSigned|numberDecimal"
                        android:maxLength="8"
                        android:ems="8"
                        android:maxLines="1"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>-->