<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bootstrap_gray_lighter"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/arrow_left"
        app:collapseIcon="@mipmap/ic_launcher"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorWhite"
        app:subtitleTextColor="@color/colorWhite"
        >
    </android.support.v7.widget.Toolbar>
    <!--   -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/LLStyle"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/tv_TitreFormulaire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_CahierInventaire"
                    style="@style/tvTitre2"
                    android:textAlignment="center"
                    android:textColor="@color/bootstrap_brand_primary"
                    android:textSize="22dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/LLStyle"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Selectionnez_TypeFormulaire"
                    style="@style/tvTitre2"
                    />
                <Spinner
                    android:id="@+id/sp_TypeFormulaire"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/label_Selectionnez_TypeFormulaire"
                    android:spinnerMode="dialog"
                    android:background="@drawable/my_shape"
                    android:layout_marginBottom="@dimen/activity_10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                style="@style/LLStyle"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Selectionnez_Departement"
                    style="@style/tvTitre2"
                    />
                <Spinner
                    android:id="@+id/sp_Departement"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/label_Selectionnez_Departement"
                    android:spinnerMode="dialog"
                    android:background="@drawable/my_shape"
                    android:layout_marginBottom="@dimen/activity_10dp"
                    />

                <TextView
                    android:id="@+id/tv_Commune"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Selectionnez_Une_Commune"
                    style="@style/tvTitre2"
                    />
                <Spinner
                    android:id="@+id/sp_Commune"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/label_Selectionnez_Departement"
                    android:spinnerMode="dialog"
                    android:background="@drawable/my_shape"
                    android:layout_marginBottom="@dimen/activity_10dp"
                    />

                <TextView
                    android:id="@+id/tv_Vqse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Selectionnez_SectionCommunnale"
                    style="@style/tvTitre2"
                    />
                <Spinner
                    android:id="@+id/sp_Vqse"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/label_Selectionnez_SectionCommunnale"
                    android:spinnerMode="dialog"
                    android:background="@drawable/my_shape"
                    android:layout_marginBottom="@dimen/activity_10dp"
                    />

                <TextView
                    android:id="@+id/tv_CodeSDE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Selectionnez_CodeSDE"
                    style="@style/tvTitre2"
                    />
                <Spinner
                    android:id="@+id/sp_CodeSDE"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/label_Selectionnez_CodeSDE"
                    android:spinnerMode="dialog"
                    android:background="@drawable/my_shape"
                    android:layout_marginBottom="@dimen/activity_10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/LLStyle"
                >

                <!--<android.support.design.widget.TextInputLayout
                    android:id="@+id/TIL_CodeSDE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"

                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:counterTextAppearance="@style/counterText"
                    app:counterOverflowTextAppearance="@style/counterOverride"
                    >
                    <EditText
                        android:background="@drawable/my_shape"
                        android:padding="10dp"
                        android:id="@+id/et_CodeSDE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_CodeSDE"
                        android:inputType="text"
                        android:maxLength="11"
                        android:ems="14"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>-->

                <TextView
                    android:id="@+id/tv_NomEtPrenomCartographe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_NomEtPrenomCartographe"
                    style="@style/tvTitre2"
                    />
                <EditText
                    android:background="@drawable/my_shape"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/et_NomEtPrenomCartographe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_NomEtPrenomCartographe"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"
                    />
                <!--<android.support.design.widget.TextInputLayout
                    android:id="@+id/TIL_NomEtPrenomCartographe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    >
                </android.support.design.widget.TextInputLayout>-->

                <TextView
                    android:id="@+id/tv_NomEtPrenomSuperviseur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_NomEtPrenomSuperviseur"
                    style="@style/tvTitre2"
                    />
                <EditText
                    android:background="@drawable/my_shape"
                    android:padding="10dp"
                    android:id="@+id/et_NomEtPrenomSuperviseur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_NomEtPrenomSuperviseur"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"
                    />
                <!--<android.support.design.widget.TextInputLayout
                    android:id="@+id/TIL_NomEtPrenomSuperviseur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    >
                </android.support.design.widget.TextInputLayout>-->

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_NePlusAfficherCetteFenetre"
                    android:id="@+id/cb_NePlusAfficherCetteFenetre"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:visibility="gone"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/LLStyle"
                android:gravity="center"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Quitter"
                    android:id="@+id/btnQuitter"
                    android:background="@color/bootstrap_brand_secondary_border"
                    android:paddingLeft="@dimen/activity_10dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_10dp"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Configurer"
                    android:id="@+id/btnContinuer"
                    android:background="@color/bootstrap_brand_primary"
                    android:textColor="@color/colorWhite"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_10dp"
                    android:layout_marginLeft="@dimen/activity_10dp"
                    android:layout_marginRight="@dimen/activity_10dp"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_Modifier"
                    android:id="@+id/btn_Modifier"
                    android:background="@color/bootstrap_brand_info"
                    android:textColor="@color/colorWhite"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_10dp"
                    android:layout_marginLeft="@dimen/activity_10dp"
                    android:layout_marginRight="@dimen/activity_10dp"

                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <!--  -->

</LinearLayout>
